white flag on white visiblity fix

--- a/src/sass/light-theme.scss
+++ b/src/sass/light-theme.scss
@@ -4,11 +4,9 @@ $primary-color-l:hsl(200, 15%, 8%);
 $secondary-color-l: hsl(0, 0%, 100%);
 $input-color-l: hsl(0, 0%, 52%);
 
-body{
-    background-color: $bg-color-l;
-}
+
 .App {
-    min-height: 100%;
+    
     &_light {
         @include transition-ease;
         @include set-color($bg-color-l, $bg-color-l);
@@ -27,6 +25,9 @@ body{
         .country-card {
             @include transition-ease;
             @include set-color($secondary-color-l, $primary-color-l);
+            &__flag{
+                box-shadow: 0 3px 5px 0 $bg-color-l;
+            }
         }
 
         .country-list {
@@ -53,7 +54,7 @@ body{
             .btn-country-list__filter {
                 @include set-border($bg-color-l);
                 @include set-color($secondary-color-l, $primary-color-l);
-
+                
             }
 
             .dropdown {
